--- a/Frontend/src/css/index.css
+++ b/Frontend/src/css/index.css
@@ -4,8 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+ 
   max-width: 100svw;
 
   font-synthesis: none;
@@ -57,7 +56,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color:  #1b1b1b;
+  color: #ffffff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
